manage --add-opens option on JPS level to ensure it is used only when applicable (IDEA-274639)
GitOrigin-RevId: 880d78010ae0b3d1b6bb8a80c47d26c92a91cdfa